foro de nik nico pagina.html

--- a/nico pagina.html
+++ b/nico pagina.html
@@ -90,7 +90,7 @@
         </p>
 
         <div class="treasure-map">
-            <img src="https://static.wikia.nocookie.net/lolesports_gamepedia_en/images/6/6a/Nik_Caster_LVP_2021.jpg/revision/latest?cb=20210608030255" alt="Mapa del Tesoro">
+            <img src="https://static.wikia.nocookie.net/lolesports_gamepedia_en/images/6/6a/Nik_Caster_LVP_2021.jpg/revision/latest/scale-to-width-down/220?cb=20210608030255" alt="Mapa del Tesoro">
             <p><em>Nicolas Segura el heredero más hermoso de todo el reino. </em></p>
         </div>
 
