dragon 1 change nico pagina.html

--- a/nico pagina.html
+++ b/nico pagina.html
@@ -101,7 +101,7 @@
         </p>
 
         <div class="dragons-gallery">
-            <img src="https://static.wikia.nocookie.net/yugiohenespanol/images/e/ef/Drag%C3%B3n_blanco_de_ojos_azules.jpg/revision/latest?cb=20200510222324&path-prefix=es" alt="Dragón 1">
+            <img src="https://m.media-amazon.com/images/I/71KuJFf0kDL._AC_UF894,1000_QL80_.jpg" alt="Dragón 1">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgJh7yp9T-Xq07q_4Djd3c7q9TXH3Q3fhZNw&s" alt="Dragón 2">
             <img src="https://www.cardtrader.com/uploads/blueprints/image/247523/show_blue-eyes-white-dragon-2020-legend-of-blue-eyes-white-dragon-25th-anniversary-edition.png" alt="Dragón 3">
         </div>
